modified:   nbody_transformer.ipynb     made quite some changes to the notebook

--- a/nbody_transformer.ipynb
+++ b/nbody_transformer.ipynb
@@ -217,19 +217,20 @@
    "outputs": [],
    "source": [
     "class SelfAttentionClifford(nn.Module):\n",
-    "    def __init__(self, num_feat, num_nodes, num_edges, algebra):\n",
+    "    def __init__(self, num_feat, num_nodes, num_edges, algebra, num_heads):\n",
     "        super(SelfAttentionClifford, self).__init__()\n",
     "        self.num_feat = num_feat\n",
     "        self.num_nodes = num_nodes\n",
     "        self.num_edges = num_edges\n",
     "        self.algebra = algebra\n",
+    "\n",
     "        self.q_linear = MVLinear(algebra, num_feat, 1, subspaces=True)\n",
     "        self.k_linear = MVLinear(algebra, num_feat, 1, subspaces=True)\n",
     "        self.v_linear = MVLinear(algebra, num_feat, 1, subspaces=True)\n",
     "        self.output_embedding = MVLinear(algebra, 1*2, num_feat, subspaces=True)\n",
     "        self.concat_layernorm = MVLayerNorm(algebra, 2)\n",
     "\n",
-    "    def forward(self, feature_matrix):\n",
+    "    def forward(self, feature_matrix, attention_mask):\n",
     "        bs = feature_matrix.size(0)//25\n",
     "\n",
     "        # Compute query, key, and value matrices\n",
@@ -242,8 +243,14 @@
     "        k1_reshape = k.view(25*bs, -1)\n",
     "\n",
     "        attn = torch.mm(q1_reshape, k1_reshape.T)  # (bs*(num_nodes + num_edges), num_feat, 8)\n",
+    "        \n",
     "        # Normalize the attention weights with d normally\n",
     "        attn = attn / math.sqrt(k.size(-1))\n",
+    "\n",
+    "        # Apply the attention mask\n",
+    "        if attention_mask is not None:\n",
+    "            attn = attn + attention_mask\n",
+    "\n",
     "        attn = F.softmax(attn, dim=-1)\n",
     "\n",
     "        v_reshaped = v.squeeze(1)\n",
@@ -272,14 +279,15 @@
    "outputs": [],
    "source": [
     "class GAST_block(nn.Module):\n",
-    "    def __init__(self, d_model, num_heads, clifford_algebra, channels):\n",
+    "    def __init__(self, clifford_algebra, channels, num_nodes, num_edges, num_heads):\n",
     "        super(GAST_block, self).__init__()\n",
     "        self.mvlayernorm = MVLayerNorm(clifford_algebra, channels)\n",
-    "        self.self_attn = SelfAttentionClifford(7, 5, 20, clifford_algebra)\n",
+    "        self.self_attn = SelfAttentionClifford(channels, num_nodes, num_edges, clifford_algebra, num_heads)\n",
     "\n",
-    "    def forward(self, src, src_mask=None):\n",
-    "        src = self.mvlayernorm(src)\n",
-    "        src = self.self_attn(src)\n",
+    "    def forward(self, src, src_mask):\n",
+    "        src_norm = self.mvlayernorm(src)\n",
+    "        src_attn = self.self_attn(src_norm, src_mask)\n",
+    "        src = src + src_attn # Residual connection BUT ADD OR MVlinear\n",
     "        return src"
    ]
   },
@@ -290,11 +298,12 @@
    "outputs": [],
    "source": [
     "class GAST(nn.Module):\n",
-    "    def __init__(self, num_layers, d_model, num_heads, clifford_algebra, channels):\n",
+    "    def __init__(self, clifford_algebra, channels, num_nodes, num_edges, num_layers, num_heads):\n",
     "        super(GAST, self).__init__()\n",
     "        self.activation = MVSiLU(clifford_algebra, channels)\n",
     "        self.layers = nn.ModuleList(\n",
-    "            [GAST_block(d_model, num_heads, clifford_algebra, channels) for _ in range(num_layers)])\n",
+    "            [GAST_block(clifford_algebra, channels, num_nodes, num_edges, num_heads) for _ in range(num_layers)]\n",
+    "        )\n",
     "\n",
     "    def forward(self, src, src_mask=None):\n",
     "        for layer in self.layers:\n",
@@ -313,7 +322,7 @@
     "    def __init__(self, input_dim, d_model, num_heads, num_layers, batch_size, clifford_algebra, channels):\n",
     "        super(NBODY_Transformer, self).__init__()\n",
     "        self.positional_encoding = PositionalEncoding(d_model, batch_size)\n",
-    "        self.GAST = GAST(num_layers, d_model, num_heads, clifford_algebra, channels)\n",
+    "        self.GAST = GAST(num_layers=num_layers, num_heads=num_heads, channels=channels, num_nodes=5, num_edges=20, clifford_algebra=clifford_algebra)\n",
     "        self.MVinput = MVLinear(clifford_algebra, input_dim, d_model, subspaces=True)\n",
     "        self.MVGP = MVLinear(clifford_algebra, d_model *2, d_model, subspaces=True)\n",
     "        self.n_nodes = 5\n",
@@ -337,20 +346,15 @@
     "        \n",
     "        src_MV = self.MVinput(src)\n",
     "        src_GP = clifford_algebra.geometric_product(src_MV, src_MV)\n",
-    "\n",
     "        src_cat = torch.cat((src_MV, src_GP), dim=1)\n",
-    "\n",
     "        src = self.MVGP(src_cat)\n",
     "\n",
     "        enc_output = self.GAST(src, src_mask)\n",
     "        output = enc_output\n",
+    "\n",
     "        # Reshape the tensor to [batch_size, total_elements, 7, 8]\n",
     "        reshaped_output = output.view(batch_size, self.n_edges+ self.n_nodes , 7, 8)\n",
-    "\n",
-    "        # Extract the first 5 components (nodes) from each group of 25\n",
     "        nodes = reshaped_output[:, :self.n_nodes, :, :]\n",
-    "\n",
-    "        # Select the 2nd feature (index 1) of the 7 features\n",
     "        selected_feature = nodes[:, :, 1, :]\n",
     "        selected_feature = selected_feature.reshape(batch_size*self.n_nodes, 8)\n",
     "\n",
@@ -360,147 +364,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1/10 [00:02<00:23,  2.63s/it]"
+      " 10%|█         | 1/10 [00:00<00:05,  1.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 1.3463870286941528\n"
+      "Epoch 1, Loss: 2.0076487064361572\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 2/10 [00:05<00:20,  2.59s/it]"
+      " 20%|██        | 2/10 [00:01<00:04,  1.77it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2, Loss: 1.4775753021240234\n"
+      "Epoch 2, Loss: 1.987411379814148\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3/10 [00:07<00:18,  2.59s/it]"
+      " 30%|███       | 3/10 [00:01<00:03,  1.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3, Loss: 3.6336231231689453\n"
+      "Epoch 3, Loss: 1.8423269987106323\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 4/10 [00:10<00:15,  2.62s/it]"
+      " 40%|████      | 4/10 [00:02<00:03,  1.84it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4, Loss: 1.566415548324585\n"
+      "Epoch 4, Loss: 1.7885481119155884\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 5/10 [00:13<00:13,  2.61s/it]"
+      " 50%|█████     | 5/10 [00:02<00:02,  1.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5, Loss: 1.3960540294647217\n"
+      "Epoch 5, Loss: 1.6248044967651367\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 6/10 [00:15<00:10,  2.60s/it]"
+      " 60%|██████    | 6/10 [00:03<00:02,  1.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6, Loss: 1.0230329036712646\n"
+      "Epoch 6, Loss: 1.761962652206421\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 7/10 [00:18<00:07,  2.58s/it]"
+      " 70%|███████   | 7/10 [00:03<00:01,  1.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7, Loss: 1.5396754741668701\n"
+      "Epoch 7, Loss: 1.6039340496063232\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 8/10 [00:20<00:05,  2.59s/it]"
+      " 80%|████████  | 8/10 [00:04<00:01,  1.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8, Loss: 1.6015619039535522\n"
+      "Epoch 8, Loss: 1.5964337587356567\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 9/10 [00:23<00:02,  2.62s/it]"
+      " 90%|█████████ | 9/10 [00:04<00:00,  1.84it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9, Loss: 1.205975890159607\n"
+      "Epoch 9, Loss: 1.5708611011505127\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:26<00:00,  2.61s/it]"
+      "100%|██████████| 10/10 [00:05<00:00,  1.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10, Loss: 0.9032961130142212\n"
+      "Epoch 10, Loss: 1.644606590270996\n"
      ]
     },
     {
@@ -515,9 +519,9 @@
     "# Hyperparameters\n",
     "input_dim = 7  # feature_dim\n",
     "d_model = 7 # hidden_dim for transformer\n",
-    "num_heads = 8 # number of heads in transformer\n",
+    "num_heads = 7 # number of heads in transformer\n",
     "num_layers = 6 # number of transformer layers\n",
-    "batch_size = 2\n",
+    "batch_size = 100\n",
     "channels = 7   #????????\n",
     "num_samples = 256\n",
     "\n",
