update moved files seperate

--- a/nbody_transformer.ipynb
+++ b/nbody_transformer.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.599767Z",
+     "start_time": "2024-05-16T07:16:19.419770Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -24,7 +29,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.606003Z",
+     "start_time": "2024-05-16T07:16:20.600876Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Define the metric for 3D space (Euclidean)\n",
@@ -38,7 +48,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.609067Z",
+     "start_time": "2024-05-16T07:16:20.606691Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def make_edge_attr(node_features, edges, batch_size):\n",
@@ -66,7 +81,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.615394Z",
+     "start_time": "2024-05-16T07:16:20.609799Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def embed_nbody_graphs(batch):\n",
@@ -149,7 +169,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.619594Z",
+     "start_time": "2024-05-16T07:16:20.616976Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def generate_mock_batch(batch_size):\n",
@@ -187,7 +212,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.622600Z",
+     "start_time": "2024-05-16T07:16:20.620330Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class PositionalEncoding(nn.Module):\n",
@@ -213,7 +243,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.626836Z",
+     "start_time": "2024-05-16T07:16:20.623215Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class SelfAttentionClifford(nn.Module):\n",
@@ -275,7 +310,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.629757Z",
+     "start_time": "2024-05-16T07:16:20.627334Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class GAST_block(nn.Module):\n",
@@ -294,7 +334,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.632400Z",
+     "start_time": "2024-05-16T07:16:20.630323Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class GAST(nn.Module):\n",
@@ -315,7 +360,12 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:20.636886Z",
+     "start_time": "2024-05-16T07:16:20.632977Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class NBODY_Transformer(nn.Module):\n",
@@ -364,147 +414,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-16T07:16:25.752609Z",
+     "start_time": "2024-05-16T07:16:20.637402Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1/10 [00:00<00:05,  1.67it/s]"
+      " 10%|█         | 1/10 [00:00<00:04,  1.97it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 2.0076487064361572\n"
+      "Epoch 1, Loss: 1.7925630807876587\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 2/10 [00:01<00:04,  1.77it/s]"
+      " 20%|██        | 2/10 [00:00<00:03,  2.10it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2, Loss: 1.987411379814148\n"
+      "Epoch 2, Loss: 1.6403955221176147\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3/10 [00:01<00:03,  1.82it/s]"
+      " 30%|███       | 3/10 [00:01<00:03,  2.12it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3, Loss: 1.8423269987106323\n"
+      "Epoch 3, Loss: 1.5150178670883179\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 4/10 [00:02<00:03,  1.84it/s]"
+      " 40%|████      | 4/10 [00:01<00:02,  2.15it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4, Loss: 1.7885481119155884\n"
+      "Epoch 4, Loss: 1.5389164686203003\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 5/10 [00:02<00:02,  1.85it/s]"
+      " 50%|█████     | 5/10 [00:02<00:02,  2.13it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5, Loss: 1.6248044967651367\n"
+      "Epoch 5, Loss: 1.4883360862731934\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 6/10 [00:03<00:02,  1.85it/s]"
+      " 60%|██████    | 6/10 [00:02<00:01,  2.13it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6, Loss: 1.761962652206421\n"
+      "Epoch 6, Loss: 1.431846261024475\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 7/10 [00:03<00:01,  1.85it/s]"
+      " 70%|███████   | 7/10 [00:03<00:01,  2.08it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7, Loss: 1.6039340496063232\n"
+      "Epoch 7, Loss: 1.404818058013916\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 8/10 [00:04<00:01,  1.83it/s]"
+      " 80%|████████  | 8/10 [00:03<00:00,  2.07it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8, Loss: 1.5964337587356567\n"
+      "Epoch 8, Loss: 1.3300471305847168\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 9/10 [00:04<00:00,  1.84it/s]"
+      " 90%|█████████ | 9/10 [00:04<00:00,  2.10it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9, Loss: 1.5708611011505127\n"
+      "Epoch 9, Loss: 1.3741260766983032\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:05<00:00,  1.83it/s]"
+      "100%|██████████| 10/10 [00:04<00:00,  2.11it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10, Loss: 1.644606590270996\n"
+      "Epoch 10, Loss: 1.3387272357940674\n"
      ]
     },
     {
